flashing working server side by making animation calls from to the API in a timer thread.
