# python3/auto-eyes/api.py
@@ -6,6 +6,7 @@ from http import HTTPStatus
 from pydoc import locate
 from subprocess import call
 from time import time, sleep
+import requests
 
 import connexion
 from flask_cors import CORS
@@ -111,14 +112,10 @@ def animator_call():
     # simple loop is chosen over multiple threading for simplicity at the cost of exact calls
     # each animator should return as quick as possible and manage time on their own making no calls per time assumptions
     # Threading.Timer can be used if individual threads would be better https://stackoverflow.com/questions/14384739/
-    while True:
-        times_called = times_called + 1
-
-        current_seconds = int(time())
-        if current_seconds != time_last_printed:
-            print("animator called {times} times at {seconds}".format(times=times_called, seconds=current_seconds))
-            time_last_printed = current_seconds
-        sleep(sleep_time)
+    requests.put('http://localhost:9090/v1.0/animations')
+    global animator_thread
+    animator_thread = threading.Timer(sleep_time, animator_call)
+    animator_thread.start()
 
 
 def animator_thread_start():
@@ -126,16 +123,20 @@ def animator_thread_start():
     global animator_thread
     # Create your thread
     print("starting thread")
-    animator_thread = threading.Thread(target=animator_call)
+    animator_thread = threading.Timer(10, animator_call)
     animator_thread.start()
+
+
+def animate():
+    vehicle.animate(time())
 
 
 def main():
     app = connexion.FlaskApp(__name__, port=9090, specification_dir='openapi/')
     app.add_api('api.yaml', arguments={'title': 'Autoculi'})
     CORS(app.app)
-    # animator_thread_start()
-    # atexit.register(animator_thread_interrupt)
+    animator_thread_start()
+    atexit.register(animator_thread_interrupt)
     app.run()
 
 
