# python3/auto-eyes/openapi/api.yaml
@@ -99,6 +99,21 @@ paths:
                             schema:
                                 type: string
                                 example: anything
+    /animations:
+        put:
+            summary: Updates communicators with animations
+            description: Any communication with an animation will be refreshed if necessary
+            operationId: api.animate
+            tags:
+                - animations
+            responses:
+                200:
+                    description: animated
+                    content:
+                        application/json:
+                            schema:
+                                type: string
+                                example: anything
 
 components:
     schemas:
